<resources>
    <string name="app_name">History-of-Kazakhstan</string>
    <string name="title_home">Home</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_account">Account</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome"><b>Welcome!</b></string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
</resources>